feat: move world/player accessor listener to non static code